--- a/EEPM(6 semester)/EEPM_Lab4.ipynb
+++ b/EEPM(6 semester)/EEPM_Lab4.ipynb
@@ -50,7 +50,8 @@
           "height": 560
         },
         "id": "O2ZEVeg-d5_g",
-        "outputId": "94580658-193c-422a-84db-8134927823e5"
+        "outputId": "94580658-193c-422a-84db-8134927823e5",
+        "collapsed": true
       },
       "outputs": [
         {
@@ -128,7 +129,8 @@
           "height": 542
         },
         "id": "8yMVCPDLd5_h",
-        "outputId": "ac6973c5-dc4c-4f5c-a52a-3fa64af74c62"
+        "outputId": "ac6973c5-dc4c-4f5c-a52a-3fa64af74c62",
+        "collapsed": true
       },
       "outputs": [
         {
@@ -213,7 +215,8 @@
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 578
-        }
+        },
+        "collapsed": true
       },
       "outputs": [
         {
@@ -301,7 +304,8 @@
         "outputId": "528cbcf2-e6fd-47d1-ca4a-c18fdefb4b56",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "collapsed": true
       },
       "outputs": [
         {
@@ -344,7 +348,8 @@
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 542
-        }
+        },
+        "collapsed": true
       },
       "outputs": [
         {
@@ -465,7 +470,8 @@
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 472
-        }
+        },
+        "collapsed": true
       },
       "outputs": [
         {
